<?xml version="1.0"?>
<package format="3">
  <name>robot_decision</name>
  <version>0.0.1</version>
  <description>Autonomous decision making for OriginCar competition</description>
  <maintainer email="your_email@todo.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ai_msgs</depend>
  <depend>origincar_msg</depend>
  <build_depend>libhbmem</build_depend>
  <build_depend>libion</build_depend>
  <build_depend>libalog</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>