<?xml version="1.0"?>
<package format="3">
  <name>robot_driver</name>
  <version>0.0.1</version>
  <description>ROS2 driver for OriginCar base hardware</description>
  <maintainer email="your_email@todo.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ackermann_msgs</depend>
  <depend>origincar_msg</depend>  
  <depend>serial</depend>
  <depend>robot_localization</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>